--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.3.1'
     def lifecycle_version = "2.4.1"
     def room_version = "2.4.2"
 
