--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.3.1'
+    implementation 'androidx.test:core:1.4.0'
     def lifecycle_version = "2.4.1"
     def room_version = "2.4.2"
 
